<resources>
    <string name="app_name">MGI Admin</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="smsServiceUrl">http://sms.masterwebwork.com/api/sendhttp.php?</string>
    <string name="smsServiceApiKey">4804AfMvfSSOpSun59378d35</string>
    <string name="smsServiceSenderId">LOGSTC</string>
    <string name="selectBatch">SELECT CLASS</string>
    <string name="batch">Class</string>
    <string name="subject">Subject</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="mobileNumber">Enter registered Mobile Number</string>
    <string name="password">Password</string>
    <string name="errInvalidMobNum">Mobile Number is not registered</string>
    <string name="errInvalidPassword">Invalid Password</string>
    <string name="emailId">Email Id</string>
    <string name="support">Support</string>
    <string name="appinfo">App Info</string>
    <string name="aboutUs">About Us</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="lastName_unavailable">Not Available</string>
    <string name="unavailable">Not Available</string>
    <string name="errInvalidEmail">Invalid Email Id</string>
    <string name="calendar">Calendar</string>
    <string name="addressForStudent">Address *</string>
    <string name="address">Address </string>
    <string name="contact">Contact</string>
    <string name="mission">Mission</string>
    <string name="vision">Vision</string>
    <string name="verify_cap">VERIFY</string>
    <string name="start">Hi Admin!</string>
    <string name="attendance">Attendance</string>
    <string name="assignment">Assignment</string>
    <string name="colleagues">Colleagues</string>
    <string name="mySchedule">mySchedule</string>
    <string name="examSchedule">examSchedule</string>
    <string name="scoreCard">scoreCard</string>
    <string name="select_batch_cap">SELECT BATCH</string>
    <string name="establishmentYear">Establishment Year *</string>
    <string name="studentAttendance">Student Attendance</string>
    <string name="event">Event</string>
    <string name="from_date">From Date *</string>
    <string name="to_date">To Date</string>
    <string name="faculty">Faculty</string>
    <string name="description">Description</string>
    <string name="descriptionCap">DESCRIPTION</string>
    <string name="firstName">First Name *</string>
    <string name="lastName">Last Name *</string>
    <string name="phone">Mobile Number <font color='@color/colorRed'>*</font></string>
    <string name="joiningYear">Joining Year *</string>
    <string name="designation">Designation</string>
    <string name="numberofstudent">Total Number of Students</string>
    <string name="students">Students</string>
    <string name="middleName">Middle Name</string>
    <string name="selectTitle">Title</string>
    <string name="selectFaculty">SELECT FACULTY</string>
    <string name="all_batch">ALL CLASSES</string>
    <string name="select_batch">SELECT CLASS</string>
    <string name="update">UPDATE</string>
    <string name="Date">Date</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="middleName_unavailable">Unavailable</string>
    <string name="faculties">Faculties</string>
    <string name="parent">Parent</string>
    <string name="enquiry">Enquiry</string>
    <string name="institute">Institute</string>
    <string name="fatherName">Father</string>
    <string name="motherName">Mother</string>
    <string name="longName">Long Name</string>
    <string name="shortName">Name</string>
    <string name="dob">Date Of Birth <font color='@color/colorRed'>*</font></string>
    <string name="batchFaculty">Class Teacher</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="comments">FollowUp</string>
    <string name="selectedRank">Select Rank</string>
    <string name="selectStudent">Select Student Name</string>
    <string name="competitionWinner">Competition Winner</string>
    <string name="selectExpenseCategory">Expense Category</string>
    <string name="expense">Expense</string>
    <string name="amount">Amount</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="studentsOfMonth">Student Of Month</string>
    <string name="batchAge">Class Age</string>
    <string name="eventType">Event Type</string>
    <string name="expenseCategory">Expense Category</string>
    <string name="feedbackCategory">Feedback category</string>
    <string name="feeComponent">Fee Component</string>
    <string name="selectFeedbackCategory">SELECT FEEDBACK CATEGORY</string>
    <string name="feedback">Note toTeacher</string>
    <string name="uniformSize">UniformSize</string>
    <string name="shoeSize">ShoeSize</string>
    <string name="studentKit">Student Kit</string>
    <string name="studentFees">Student Fees</string>
    <string name="feeStructure">Fee Structure</string>
    <string name="selectFeeComponent">SELECT FEE COMPONENT</string>
    <string name="totalFee">Total Fees</string>
    <string name="paymentOption">Payment Option</string>
    <string name="receiptId">ReceiptId</string>
    <string name="paidFees">Paid Fees</string>
    <string name="remainFees">Remaining Fees</string>
    <string name="years">Years</string>
    <string name="months">Months</string>
    <string name="editEventType">Edit Event Type</string>
    <string name="birthday">Birthday</string>
    <string name="PendingEnquiry">Pending Enquiry</string>
    <string name="AdmittedEnquiry">Admitted Enquiry</string>
    <string name="RejectedEnquiry">Rejected Enquiry</string>
    <string name="selectMonth">Select Month</string>
    <string name="dressCode">Dress Code</string>
    <string name="comment_reason1">Fees is too high</string>
    <string name="comment_reason2">Transportation facility not available</string>
    <string name="comment_reason3">Institute is far from Home</string>
    <string name="totalExpense">Total Expense</string>
    <string name="selectYear">Select Year</string>
    <string name="addBatch">Add Class</string>
    <string name="addBatchAge">Add Class Age</string>
    <string name="addBatchFaculty">Add Class Faculty</string>
    <string name="addExpense">Add Expense</string>
    <string name="addFeeStructure">Add Fee Structure</string>
    <string name="addStudentFees">Add Student Fees</string>
    <string name="addStudentOfMonth">Add Student Of Month</string>
    <string name="studentKitOrdered">Ordered</string>
    <string name="studentKitNotOrdered">Not Ordered</string>
    <string name="studentKitReceived">Received</string>
    <string name="studentKitDelivered">Delivered</string>
    <string name="studentFeesDetails">Student Fees Details</string>
    <string name="noEnquiry">No Enquiries</string>
    <string name="selectSection">SELECT SECTION</string>
    <string name="addSection">Add Section</string>
    <string name="section">Section</string>
    <string name="selectEventType">Select Event Type</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="staff">Staff</string>
    <string name="AcademicCalendar">Academic Calendar</string>
    <string name="childName">Child\'s Name *</string>
    <string name="lastNameInitial">Last Name/Initial <p><font color="#FF0000">*</font></p></string>
    <string name="father">Father\'s Name <font color='@color/colorRed'>*</font></string>
    <string name="gender">Gender </string>
    <string name="enquiryDate">Enquiry Date <font color='@color/colorRed'>*</font></string>
    <string name="addBook">Add Book</string>
    <string name="bookType">Book Type</string>
    <string name="book">Book</string>
    <string name="speech_prompt">Please speak!</string>
    <string name="speech_not_supported">Speech to text NOT supported on your device.</string>
    <string name="competition">Competition</string>
    <string name="competitionName">Competition *</string>
    <string name="homeWork">Assignment</string>
    <string name="createdDate">Created Date</string>
    <string name="dueDate">Due Date</string>
    <string name="homeWorkRecord">Home Work Record</string>
    <string name="academicCalendar">Academic Calendar</string>
    <string name="addMessage">Add Message</string>
    <string name="message">Message</string>
    <string name="addHoliday">Add Holiday</string>
    <string name="holiday">Holiday</string>
    <string name="FatherPhone">Father\'s Mobile Number *</string>
    <string name="MotherPhone">Mother\'s Mobile Number</string>
    <string name="EmergencyPhone">Emergency Contact *</string>
    <string name="feesPaid">Fees Paid</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="careTaker">Care Taker</string>
    <string name="dateOfJoining">Date Of Joining</string>
    <string name="salaryPerMonth">Salary Per Month</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unselectAll">Unselect All</string>
    <string name="sms">SMS</string>
    <string name="configuration">Configuration</string>
    <string name="smsEmail">SMS/Email</string>
    <string name="selectAll">Select All</string>
    <string name="Regular">Regular</string>
    <string name="Special">Special</string>
    <string name="sectionA">A</string>
    <string name="responseNotReq">Response NOT Required</string>
    <string name="responseReq">Response Required</string>
    <string name="takeAttendance">Take Attendance</string>
    <string name="home">Home</string>
    <string name="attendanceDate">Attendance Date</string>
    <string name="attendanceTaken">Attendance is marked for selected date. You can update.</string>
    <string name="markAttendance">Mark attendance</string>
    <string name="attendanceDaywise">Attendance Daywise</string>
    <string name="qualification">Qualification</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="deleteEventType">Event type has been deleted</string>
    <string name="documentType">Document Type</string>
    <string name="editDocumentType">Edit Document Type</string>
    <string name="staffType">Staff Type</string>
    <string name="editStaffType">Edit Staff Type</string>
    <string name="not_expecting_resp">NOT EXPECTING RESPONSE</string>
    <string name="expecting_resp">EXPECTING RESPONSE</string>
    <string name="select_batchs">SELECT CLASSES</string>
    <string name="select_event_type">SELECT EVENT TYPE</string>
    <string name="select_student">SELECT STUDENT</string>
    <string name="select_students">SELECT STUDENTS</string>
    <string name="selectAcademicYear">SELECT ACADEMIC YEAR</string>
    <string name="staffAttendance">Staff Attendance</string>
    <string name="classTeacher">Class Teacher</string>
    <string name="achievement">Achievement</string>
    <string name="communication">Communication</string>
    <string name="student">Student</string>
    <string name="administration">Administration</string>
    <string name="staffSetUp">Staff Setup</string>
    <string name="academics">Academics</string>
    <string name="instituteSetUp">Institute Setup</string>
    <string name="academicYear">Academic Year</string>
    <string name="selectPaymentOption">PAYMENT OPTION</string>
    <string name="eventName">Event *</string>
    <string name="instituteName">Institute Name *</string>
    <string name="aboutInstitute">About Institute</string>
    <string name="primaryContactNo">Primary Contact Number *</string>
    <string name="selectSubject">SELECT SUBJECT</string>
    <string name="addSubjectFaculty">Add Subject Faculty</string>
    <string name="period_cap">Period</string>
</resources>