<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/addFeeStructure"
            android:textSize="18sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_class_16"
                android:drawablePadding="@dimen/drawablePaddingSize"
                android:text="@string/selectBatch"
                android:textColor="@color/colorPrimaryDark" />

            <Spinner
                android:id="@+id/spClass"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:prompt="@string/selectBatch"
                android:spinnerMode="dialog" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:drawableLeft="@drawable/ic_class_16"
                android:drawablePadding="3dp"
                android:text="@string/selectFeeComponent"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/spFeeComponent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/selectExpenseCategory"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorGrey">


            <EditText
                android:id="@+id/etAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorGrey"
                android:hint="@string/amount"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/add_btn_primary"
            android:text="@string/save"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

</LinearLayout>