<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addBatch"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="18sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorGrey">


                <EditText
                    android:id="@+id/etBatchName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorGrey"
                    android:hint="@string/shortName"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Ex: LKG"
                android:textColor="@color/labelColor"
                android:textSize="@dimen/labelSize" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorGrey">


                <EditText
                    android:id="@+id/etBatchLongName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorGrey"
                    android:hint="@string/longName"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Ex: Lower Kinder Garten"
                android:textColor="@color/labelColor"
                android:textSize="@dimen/labelSize" />
            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/add_btn_primary"
                android:text="@string/save"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

</LinearLayout>