<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/addSubjectFaculty"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/tvError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:textColor="@color/colorRed"
                android:textSize="12sp"
                android:visibility="gone"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:text="@string/selectBatch"
                        android:drawableLeft="@drawable/ic_class_16"
                        android:drawablePadding="@dimen/drawablePaddingSize"
                        android:textColor="@color/colorPrimaryDark"
                         />

                    <Spinner
                        android:id="@+id/spClass"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:prompt="@string/selectBatch"
                        android:spinnerMode="dialog" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:text="@string/selectSubject"
                        android:drawableLeft="@drawable/ic_class_16"
                        android:drawablePadding="@dimen/drawablePaddingSize"
                        android:textColor="@color/colorPrimaryDark" />

                    <Spinner
                        android:id="@+id/spSubject"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:prompt="@string/selectSubject"
                        android:spinnerMode="dialog" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:drawableLeft="@drawable/ic_faculty_16"
                        android:drawablePadding="@dimen/drawablePaddingSize"
                        android:text="@string/selectFaculty"
                        android:textColor="@color/colorPrimaryDark"/>

                    <Spinner
                        android:id="@+id/spFaculty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:prompt="@string/selectFaculty"
                        android:spinnerMode="dialog" />
                </LinearLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/add_btn_primary"
                android:text="@string/save"
                android:textColor="@color/colorWhite" />
        </LinearLayout>


</LinearLayout>